# qa-engineer/backend/src/app.js
@@ -4,7 +4,12 @@ const bodyParser = require("body-parser");
 const healthCheckRoutes = require("./routers/healthcheck.router");
 const configRoutes = require("./routers/config.router");
 const tasksRoutes = require("./routers/tasks.router");
-const { validateRequestStructure, errorHandler } = require("./middleware");
+const guestsRoutes = require("./routers/guests.router");
+const {
+  validateRequestStructure,
+  errorHandler,
+  initializeRequestContext
+} = require("./middleware");
 const mongoose = require("mongoose");
 
 const app = express();
@@ -14,10 +19,13 @@ app.use(bodyParser.json());
 app.use(cors());
 app.use(express.json());
 
+app.use(initializeRequestContext);
 app.use(validateRequestStructure);
 app.use("/healthcheck", healthCheckRoutes);
 app.use("/config", configRoutes);
 app.use("/tasks", tasksRoutes);
+app.use("/guests", guestsRoutes);
+
 app.use(errorHandler);
 
 mongoose
